Updated hero carousel height and fixes

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
      height:100%;
       object-fit: cover;
     }
+
+    @media (max-width: 768px) {
+  .hero-slide {
+    min-height:70vh;/* Slightly smaller for mobiles */ 
+  }
+}
 </style>
 <head>
 <body class="d-flex flex-column min-vh-100">
