--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home - Shrava's World</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Meta Title -->
+  <title>Shrava's Global Business Enterprises | Organic Products</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Shrava's Global Business Enterprises - Premium Organic Products: Cow Ghee, Grapes, Cucumbers, Peanuts, Rice, Figs, Onions, Chillies & Pomegranates." />
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="Shrava's Global Business Enterprises, Shrava's Global, Shrava Enterprises, Organic Products, Cow Ghee, Organic Vegetables, Fresh Fruits, Basmati Rice, Organic Farming" />
+
+  <!-- Favicon (optional) -->
+  <link rel="icon" href="assets/images/logo/logo.png" type="image/png">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
  
