Updated site with latest changes

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -11,7 +11,7 @@
 
   <!-- AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     html, body {
@@ -27,8 +27,8 @@
     }
 
     h1, h2 {
-      font-family: 'Playfair Display', serif;
-      color: #008B8B;
+      font-family: 'Eczar', serif;
+      color: #1e8167;
     }
 
     body,
@@ -40,7 +40,7 @@
     input,
     select,
     textarea {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Eczar', serif;
     }
   </style>
 </head>
@@ -51,9 +51,10 @@
   <!-- Main Privacy Content -->
   <main class="container py-4" data-aos="fade-up" data-aos-duration="2000">
     <h2 class="mb-4" style="font-weight: bold;">Privacy Policy</h2>
-    <p><strong>Effective Date:</strong> [Insert Date]</p>
+  <p><strong>Effective Date:</strong> 1 September 2025</p>
 
-    <p>At <strong>Shrava's World</strong>, we respect your privacy and are committed to protecting any personal information you share with us. This Privacy Policy outlines how we collect and use your information.</p>
+
+    <p>At <strong style="color: #1e8167;">Shrava's</strong><strong style="color:#ffba66;"> World</strong>, we respect your privacy and are committed to protecting any personal information you share with us. This Privacy Policy outlines how we collect and use your information.</p>
 
     <h5>1. Information We Collect</h5>
     <ul>
@@ -79,7 +80,7 @@
     <p>You may contact us at any time to request deletion or correction of your personal data.</p>
 
     <h5>7. Contact</h5>
-    <p>For questions about this policy, email us at: <strong>shrawasworld@gmail.com</strong></p>
+    <p>For questions about this policy, email us at: <strong>shravasworld@gmail.com</strong></p>
   </main>
 
 <div data-include="components/sticky-social.html"></div>
