--- a/about.html
+++ b/about.html
@@ -20,20 +20,21 @@
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Custom CSS for Transition -->
   <style>
+    
     html, body {
       height: 100%;
       margin: 0;
       display: flex;
       flex-direction: column;
        /* font-family: 'Nunito', sans-serif; */
-      background-color: #f9f9f9;
+      /* background-color: #f9f9f9; */
     }
 
     main {
@@ -49,8 +50,8 @@
     }
 
     h1, h2 {
-  font-family: 'Playfair Display', serif;
-  color: #008B8B;
+  font-family: 'Eczar', serif;
+  color:  #1e8167;
 }
   body,
     h1, h2, h3, h4, h5, h6,
@@ -61,11 +62,11 @@
     input,
     select,
     textarea {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Eczar', serif;
     }
 
     .lead {
-      color: #D4A017;
+      color: #ffba66;
     }
 
     /* .btn-success {
@@ -87,15 +88,15 @@
         <h2 style="font-weight: bold;">About Us</h2>
       </header>
       <article>
-        <p>
-  At <strong>Shrava's World</strong>, we are passionate about bringing nature’s best to your doorstep. From nourishing <strong>Cow Ghee</strong> and traditional <strong>Cow Dung Cakes</strong> to fresh produce like <strong>Onions, Grapes, Cucumbers, Peanuts, Basmati Rice, Sweet Figs, Spicy Green Chillies,</strong> and <strong>Juicy Pomegranates</strong> – we deliver farm-fresh products with a commitment to purity and quality.
+       <p>At 
+  <strong style="color: #1e8167;">Shrava's</strong><strong style="color:#ffba66;"> World</strong>, we are passionate about bringing nature’s best to your doorstep. From nourishing <strong>Cow Ghee</strong> and traditional <strong>Cow Dung Cakes</strong> to fresh produce like <strong>Onions, Grapes, Cucumbers, Peanuts, Basmati Rice, Sweet Figs, Spicy Green Chillies, Juicy Pomegranates, Sweet Corn,</strong> and <strong>Bananas</strong> – we deliver farm-fresh products with a commitment to purity and quality.
 </p>
 
         <p>
           With a focus on organic farming and eco-friendly practices, we partner directly with farmers to ensure that every product you receive is natural, safe, and grown with care. Our goal is to promote healthy living through authentic agricultural offerings.
         </p>
         <p>
-          Whether you're a household looking for natural ghee or a business sourcing premium vegetables and fruits, Shrava's World is your trusted supplier.
+          Whether you're a household looking for natural ghee or a business sourcing premium vegetables and fruits, <strong style="color: #1e8167;">Shrava's</strong><strong style="color:#ffba66;"> World</strong> is your trusted supplier.
         </p>
       </article>
     </section>
