--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
   <!-- ✅ EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     html, body {
@@ -23,8 +23,8 @@
       flex-direction: column;
     }
       h1, h2 {
-  font-family: 'Playfair Display', serif;
-  color: #008B8B;
+  font-family: 'Eczar', serif;
+  color:  #1e8167;
 }
   body,
     h1, h2, h3, h4, h5, h6,
@@ -35,16 +35,50 @@
     input,
     select,
     textarea {
-      font-family: 'Playfair Display', serif ;
+      font-family: 'Eczar', serif ;
     }
     main {
       flex: 1;
     }
+
+    /* ✅ Loader styles */
+#loaderOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 9999;
+  display: none; /* hidden by default */
+  justify-content: center;
+  align-items: center;
+}
+ .toast {
+    max-width: 100%;        /* Don't exceed screen width */
+    word-wrap: break-word;  /* Wrap long messages */
+  }
+
+  /* Optional: make toast take most of small screen width */
+  @media (max-width: 576px) {
+    .toast {
+      width: 90vw;          /* 90% of viewport width */
+    }
+  }
   </style>
 </head>
 <body>
   <!-- ✅ Navbar -->
   <div data-include="components/navbar.html"></div>
+
+<!-- ✅ Loader Overlay -->
+<div id="loaderOverlay">
+  <div class="spinner-border text-light" role="status" style="width: 3rem; height: 3rem;">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+
+
 
   <!-- ✅ Main Content -->
   <main class="container my-5" data-aos="fade-up" data-aos-duration="1000">
@@ -58,15 +92,25 @@
         <label for="from_email" class="form-label">Email</label>
         <input type="email" class="form-control" name="email" required />
       </div>
-      <div class="mb-3">
-            <label for="quoteContact" class="form-label">Contact Number</label>
-            <input type="tel" class="form-control" id="quoteContact" name="contact" pattern="[0-9]{10}" placeholder="Enter 10-digit number" required />
-          </div>
+     <div class="mb-3">
+  <label for="quoteContact" class="form-label">Contact Number</label>
+  <input 
+    type="tel" 
+    class="form-control" 
+    id="quoteContact" 
+    name="contact" 
+    pattern="[0-9]{10}" 
+    placeholder="Enter 10-digit number" 
+    maxlength="10" 
+    required 
+  />
+</div>
+
       <div class="mb-3">
         <label for="message" class="form-label">Message</label>
         <textarea class="form-control" name="message" rows="4" required></textarea>
       </div>
-      <button type="submit" class="btn btn-primary">Send</button>
+      <button type="submit" class="btn btn-success">Send</button>
     </form>
 
     <div id="status-message" class="mt-3"></div>
@@ -110,26 +154,31 @@
 
   <!-- ✅ EmailJS Initialization -->
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      emailjs.init("7rQD69_7mW6b7hR_v"); // Your public key
+  document.addEventListener("DOMContentLoaded", function () {
+    emailjs.init("7rQD69_7mW6b7hR_v"); // Your public key
 
-      const form = document.getElementById("contact-form");
+    const form = document.getElementById("contact-form");
+    const loader = document.getElementById("loaderOverlay");
 
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
+    form.addEventListener("submit", function (e) {
+      e.preventDefault();
+      loader.style.display = "flex"; // ✅ Show loader when sending starts
 
-        emailjs.sendForm("service_4vh0zlm", "template_hqhhenl", form)
-          .then(function () {
-            const toast = new bootstrap.Toast(document.getElementById("successToast"), { delay: 3000 });
-            toast.show();
-            form.reset();
-          }, function (error) {
-            console.error("EmailJS Error:", error);
-            const toast = new bootstrap.Toast(document.getElementById("errorToast"), { delay: 3000 });
-            toast.show();
-          });
-      });
+      emailjs.sendForm("service_4vh0zlm", "template_hqhhenl", form)
+        .then(function () {
+          loader.style.display = "none"; // ✅ Hide loader after success
+          const toast = new bootstrap.Toast(document.getElementById("successToast"), { delay: 3000 });
+          toast.show();
+          form.reset();
+        }, function (error) {
+          loader.style.display = "none"; // ✅ Hide loader after error
+          console.error("EmailJS Error:", error);
+          const toast = new bootstrap.Toast(document.getElementById("errorToast"), { delay: 3000 });
+          toast.show();
+        });
     });
-  </script>
+  });
+</script>
+
 </body>
 </html>
