Reuploaded complete website with latest updates

--- a/about-preview.html
+++ b/about-preview.html
@@ -80,7 +80,7 @@
 
         <!-- Right side: Image -->
         <div class="col-lg-6 col-md-12 text-center">
-          <img src="/assets/about.png" alt="About Shrava's World" class="about-img">
+          <img src="assets/about.png" alt="About Shrava's World" class="about-img">
         </div>
 
       </div>
