Reuploaded complete website with latest updates

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
    <!-- Product Section -->
 <main>
     <div class="container mt-4"data-aos="fade-up" data-aos-duration="1000">
-      <h2 class="mb-4 text-center fw-bold" >Our Products</h2>
+      <h2 class="mb-4 mt-4 text-center fw-bold" >Our Products</h2>
       <div class="row" id="product-list">
         
         <!-- Product 1 -->
