--- a/index.html
+++ b/index.html
@@ -37,225 +37,248 @@
   ]
 }
 </script>
+ 
 
   <!-- Favicon (optional) -->
   <link rel="icon" href="assets/images/logo/logo.png" type="image/png">
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+
+   <!-- Preload first hero image for faster LCP -->
+  <link rel="preload" href="assets/about.png" as="image">
+  
  
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
- <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+ 
 <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <style>
-  :root {
-    --primary: #3B7A57;     /* Deep Sage – grounded, trustworthy */
-    --accent: #FFA500;      /* Soft Orange – warm CTA */
-    --bg-light: #F6F5F0;    /* Light Sand – clean background */
-    --text-dark: #1C1C1C;   /* Deep Charcoal – strong readability */
-    --muted: #888888;       /* Soft Gray – secondary text or borders */
-  }
-   .hover-card {
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-  .hover-card:hover {
-    transform: translateY(-6px);
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-  }
-  .card-title {
-    font-size: 1.1rem;
-    margin-bottom: 0.75rem;
-  }
-  .btn-info {
-    /* background: #17a2b8; */
-    border: none;
-  }
-  .btn-success {
-    background: #28a745;
-    border: none;
-  }
-  .btn-info:hover {
-    background: #138496;
-  }
-  .btn-success:hover {
-    background: #218838;
-  }
+<!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 
-  body {
-  
-    margin: 0;
-    padding: 0;
-    background-color: var(--bg-light);
-    color: var(--text-dark);
-  }
- p {
-  font-style: normal !important;}
- h1, h2 {
-  font-family: 'Eczar', serif;
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+ <style>
+/* =========================
+   Root Variables
+========================= */
+:root {
+  --primary: #3B7A57;     /* Deep Sage – grounded, trustworthy */
+  --accent: #FFA500;      /* Soft Orange – warm CTA */
+  --bg-light: #F6F5F0;    /* Light Sand – clean background */
+  --text-dark: #1C1C1C;   /* Deep Charcoal – strong readability */
+  --muted: #888888;       /* Soft Gray – secondary text or borders */
+}
+
+/* =========================
+   Global Styles
+========================= */
+body {
+  margin: 0;
+  padding: 0;
+  background-color: var(--bg-light);
+  color: var(--text-dark);
+  font-family: 'Eczar', serif !important;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, a, ul, ol, li, button, input, select, textarea, .btn {
+  font-family: 'Eczar', serif !important;
+}
+
+p {
+  font-style: normal !important;
+}
+
+h1, h2 {
   color: #1e8167 !important;
 }
 
-  body,
-    h1, h2, h3, h4, h5, h6,
-    p,
-    a,
-    ul, ol, li,
-    button,
-    input,
-    select,
-    textarea, .btn {
-      font-family: 'Eczar', serif !important;
-    }
-  main.hero-section {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
-                url('https://source.unsplash.com/1600x900/?industry,factory') no-repeat center center;
-    background-size: cover;
-    color: white;
-    text-align: center;
-    padding: 100px 20px;
-  }
+/* =========================
+   Buttons
+========================= */
+.btn, .btn-info, .btn-success {
+  border-radius: 0.5rem !important;
+  padding: 0.5rem 0.75rem !important;
+  font-size: 0.95rem !important;
+}
 
-  .hero-section h1 {
-    font-size: 3rem;
-    font-weight: 600;
-    margin-bottom: 20px;
-    animation: fadeInDown 1s ease-in-out;
-  }
+.btn-info {
+  border: none;
+}
+.btn-info:hover {
+  background: #138496;
+}
 
-  .hero-section p {
-    font-size: 1.25rem;
-    margin-bottom: 30px;
-    animation: fadeInUp 1s ease-in-out;
-  }
+.btn-success {
+  background: #28a745;
+  border: none;
+}
+.btn-success:hover {
+  background: #218838;
+}
 
-  .hero-section .btn-primary {
-    background-color: var(--accent);
-    border: none;
-    padding: 12px 30px;
-    font-size: 1.1rem;
-    border-radius: 30px;
-    color: #fff;
-    transition: background-color 0.3s ease;
-  }
-
-  .hero-section .btn-primary:hover {
-    background-color: #cc8400;
-  }
-
-  @keyframes fadeInDown {
-    from { opacity: 0; transform: translateY(-30px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-
-  @keyframes fadeInUp {
-    from { opacity: 0; transform: translateY(30px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(20px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-
-  .hero-slide {
-    height: 50vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 100px 20px;
-    position: relative;
-    background-blend-mode: overlay;
-   /* background: linear-gradient(120deg, rgba(25, 15, 8, 0.9), rgba(4, 80, 70, 0.9)) !important; */
-  }
-
-  .hero-slide h1,
-  .hero-slide p {
-    animation: fadeIn 1s ease-in-out;
-  }
-
-  .section-spacer {
-    margin-top: 60px;
-  }
-
-  
-   .card-img-top {
-     height:100%;
-      object-fit: cover;
-    }
-
-    @media (max-width: 768px) {
-  .hero-slide {
-    min-height:60vh;/* Slightly smaller for mobiles */ 
+/* Extra small screens adjustments */
+@media (max-width: 576px) {
+  .btn {
+    font-size: 0.85rem !important;
+    padding: 0.4rem 0.5rem !important;
   }
 }
 
-@media (max-width: 370px) {
-  .hero-slide {
-    min-height:70vh;/* Slightly smaller for mobiles */ 
-  }
+/* =========================
+   Card Styles
+========================= */
+.hover-card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.hover-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
 }
 
+.card-title {
+  font-size: 1.1rem;
+  margin-bottom: 0.75rem;
+}
 
-  /* Description text */
-  #detailsDescription {
-    text-align: justify;
-    line-height: 1.6;
-  }
+.card-img-top {
+  height: 100%;
+  object-fit: cover;
+}
 
-   /* Base table styling (already applied via classes) */
-  .custom-table {
-    font-size: 16px; /* default font size */
-  }
+/* =========================
+   Hero Section & Slides
+========================= */
+main.hero-section {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+              url('https://source.unsplash.com/1600x900/?industry,factory') no-repeat center center;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding: 100px 20px;
+}
 
-  /* Responsive adjustments for small screens */
-  @media (max-width: 768px) { /* tablets and below */
-    .custom-table {
-      font-size: 14px;
-    }
-  }
+.hero-section h1 {
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+  animation: fadeInDown 1s ease-in-out;
+}
 
-  @media (max-width: 480px) { /* mobile phones */
-    .custom-table {
-      font-size: 12px;
-    }
-  }
-  @media (max-width: 380px) { /* mobile phones */
-    .custom-table {
-      font-size: 10px;
-    }
-  }
-.btn, 
-  .btn-info, 
-  .btn-success {
-    border-radius: 0.5rem !important; /* normal rounded corners */
-    padding-left: 0.75rem !important;
-    padding-right: 0.75rem !important;
-    padding-top: 0.5rem !important;
-    padding-bottom: 0.5rem !important;
-    font-size: 0.95rem !important; /* adjust font size for all screens */
-  }
+.hero-section p {
+  font-size: 1.25rem;
+  margin-bottom: 30px;
+  animation: fadeInUp 1s ease-in-out;
+}
 
-  /* Optional: slightly smaller buttons for extra small screens */
-  @media (max-width: 576px) {
-    .btn {
-      font-size: 0.85rem !important;
-      padding-left: 0.5rem !important;
-      padding-right: 0.5rem !important;
-      padding-top: 0.4rem !important;
-      padding-bottom: 0.4rem !important;
-    }
-  }
-    /* ✅ Loader styles */
+.hero-section .btn-primary {
+  background-color: var(--accent);
+  border: none;
+  padding: 12px 30px;
+  font-size: 1.1rem;
+  border-radius: 30px;
+  color: #fff;
+  transition: background-color 0.3s ease;
+}
+.hero-section .btn-primary:hover {
+  background-color: #cc8400;
+}
+
+.hero-slide {
+  height: 50vh;
+  padding: 100px 20px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
+}
+
+.hero-slide h1,
+.hero-slide h3,
+.hero-slide p {
+  animation: fadeIn 1s ease-in-out;
+}
+
+/* Dark overlay for hero-slide */
+.hero-slide::before {
+  content: "";
+  position: absolute;
+  top:0; left:0;
+  width:100%; height:100%;
+  background-color: rgba(35, 35, 35, 0.51);
+  z-index:1;
+}
+
+/* Hero slide container */
+.hero-slide .container {
+  position: relative;
+  z-index:2;
+}
+
+/* Responsive hero slides */
+@media (max-width: 768px) {
+  .hero-slide { min-height: 60vh; background-image: url('assets/about-768.png'); }
+}
+@media (max-width: 480px) {
+  .hero-slide { min-height: 50vh; background-image: url('assets/about-480.png'); }
+}
+
+/* Desktop background */
+.hero-slide { background-image: url('assets/about-1200.png'); }
+
+/* =========================
+   Animations
+========================= */
+@keyframes fadeInDown {
+  from { opacity: 0; transform: translateY(-30px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes fadeInUp {
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* =========================
+   Section & Spacing
+========================= */
+.section-spacer {
+  margin-top: 60px;
+}
+
+/* =========================
+   Description Text
+========================= */
+#detailsDescription {
+  text-align: justify;
+  line-height: 1.6;
+}
+
+/* =========================
+   Tables
+========================= */
+.custom-table {
+  font-size: 16px;
+}
+@media (max-width: 768px) { .custom-table { font-size: 14px; } }
+@media (max-width: 480px) { .custom-table { font-size: 12px; } }
+@media (max-width: 380px) { .custom-table { font-size: 10px; } }
+
+/* =========================
+   Loader Overlay
+========================= */
 #loaderOverlay {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0,0,0,0.5);
   z-index: 9999;
-  display: none; /* hidden by default */
+  display: none;
   justify-content: center;
   align-items: center;
 }
