Reuploaded complete website with latest updates

--- a/index.html
+++ b/index.html
@@ -297,57 +297,57 @@ main.hero-section {
 </div>
 
 
- <!-- Hero Carousel Section -->
-<div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000"data-aos="fade-up">
+<!-- ✅ Hero Carousel Section -->
+<div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000" data-aos="fade-up">
 
   <div class="carousel-inner">
 
-  <!-- Slide 1 -->
-  <div class="carousel-item active">
-    <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-         style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;">
-      <!-- Dark overlay -->
-      <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
-      <div class="container position-relative">
-        <h3 class="display-4 fw-bold">Pure. Organic. Trusted.</h3>
-        <p class="lead">
-          Discover premium quality Cow Ghee, Cow Dung Cakes, Fresh Grapes, Crisp Cucumbers, Crunchy Peanuts, Aromatic Basmati Rice, Sweet Figs, Organic Onions, Spicy Green Chillies, Juicy Pomegranates, Sweet Corns & Bananas– all under one roof.
-        </p>
-        <a href="products.html" class="btn btn-warning btn-lg mt-3">Explore Our Products</a>
+    <!-- Slide 1 (LCP Optimized) -->
+    <div class="carousel-item active">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
+           style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;"
+           loading="eager">
+        <!-- Dark overlay -->
+        <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
+        <div class="container position-relative">
+          <h3 class="display-4 fw-bold">Pure. Organic. Trusted.</h3>
+          <p class="lead">
+            Discover premium quality Cow Ghee, Cow Dung Cakes, Fresh Grapes, Crisp Cucumbers, Crunchy Peanuts, Aromatic Basmati Rice, Sweet Figs, Organic Onions, Spicy Green Chillies, Juicy Pomegranates, Sweet Corns & Bananas– all under one roof.
+          </p>
+          <a href="products.html" class="btn btn-warning btn-lg mt-3">Explore Our Products</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Slide 2 -->
-  <div class="carousel-item">
-    <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-         style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;">
-      <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
-      <div class="container position-relative">
-        <h3 class="display-4 fw-bold">Sustainable Farming</h3>
-        <p class="lead">We bring farm-fresh organic goods straight to your door.</p>
-        <a href="about.html" class="btn btn-warning btn-lg mt-3">Explore Who We Are</a>
+    <!-- Slide 2 -->
+    <div class="carousel-item">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
+           style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;">
+        <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
+        <div class="container position-relative">
+          <h3 class="display-4 fw-bold">Sustainable Farming</h3>
+          <p class="lead">We bring farm-fresh organic goods straight to your door.</p>
+          <a href="about.html" class="btn btn-warning btn-lg mt-3">Explore Who We Are</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Slide 3 -->
-  <div class="carousel-item">
-    <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-         style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;">
-      <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
-      <div class="container position-relative">
-        <h3 class="display-4 fw-bold">Grown with Purpose</h3>
-        <p class="lead">From fertile lands to your hands — purity, passion, and perfection in every grain.</p>
-        <a href="contact.html" class="btn btn-warning btn-lg mt-3">Let’s Connect</a>
+    <!-- Slide 3 -->
+    <div class="carousel-item">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
+           style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;">
+        <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
+        <div class="container position-relative">
+          <h3 class="display-4 fw-bold">Grown with Purpose</h3>
+          <p class="lead">From fertile lands to your hands — purity, passion, and perfection in every grain.</p>
+          <a href="contact.html" class="btn btn-warning btn-lg mt-3">Let’s Connect</a>
+        </div>
       </div>
     </div>
+
   </div>
 
-</div>
-
-
-  <!-- Optional: Navigation controls -->
+  <!-- Navigation controls -->
   <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
@@ -356,6 +356,7 @@ main.hero-section {
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+
 </div>
 
 
