--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
   
  
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
  
 <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -184,13 +188,14 @@ main.hero-section {
 
 .hero-slide {
   height: 50vh;
-  padding: 100px 20px;
+  padding: 60px 20px; /* reduced from 100px to 60px */
   position: relative;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-blend-mode: overlay;
 }
+
 
 .hero-slide h1,
 .hero-slide h3,
@@ -224,6 +229,11 @@ main.hero-section {
 
 /* Desktop background */
 .hero-slide { background-image: url('assets/about-1200.png'); }
+
+.hero-slide:first-child {
+  min-height: 60vh; /* reduce height only for first slide to paint faster */
+}
+
 
 /* =========================
    Animations
@@ -305,10 +315,10 @@ main.hero-section {
     <!-- Slide 1 (LCP Optimized) -->
     <div class="carousel-item active">
       <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-           style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;"
-           loading="eager">
-        <!-- Dark overlay -->
-        <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
+     style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative; background-color: rgba(0,0,0,0.5);"
+     loading="eager">
+  <!-- overlay now part of background-color for faster rendering -->
+
         <div class="container position-relative">
           <h3 class="display-4 fw-bold">Pure. Organic. Trusted.</h3>
           <p class="lead">
@@ -322,8 +332,10 @@ main.hero-section {
     <!-- Slide 2 -->
     <div class="carousel-item">
       <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-           style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;">
-        <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
+     style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative; background-color: rgba(0,0,0,0.5);"
+     loading="eager">
+  <!-- overlay now part of background-color for faster rendering -->
+
         <div class="container position-relative">
           <h3 class="display-4 fw-bold">Sustainable Farming</h3>
           <p class="lead">We bring farm-fresh organic goods straight to your door.</p>
@@ -335,8 +347,10 @@ main.hero-section {
     <!-- Slide 3 -->
     <div class="carousel-item">
       <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-           style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative;">
-        <div style="position: absolute; top:0; left:0; width:100%; height:100%; background-color: rgba(0, 0, 0, 0.615);"></div>
+     style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative; background-color: rgba(0,0,0,0.5);"
+     loading="eager">
+  <!-- overlay now part of background-color for faster rendering -->
+
         <div class="container position-relative">
           <h3 class="display-4 fw-bold">Grown with Purpose</h3>
           <p class="lead">From fertile lands to your hands — purity, passion, and perfection in every grain.</p>
