Reuploaded complete website with latest updates

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -54,7 +54,7 @@
   <p><strong>Effective Date:</strong> 1 September 2025</p>
 
 
-    <p>At <strong style="color: #1e8167;">Shrava's</strong><strong style="color:#ffba66;"> World</strong>, we respect your privacy and are committed to protecting any personal information you share with us. This Privacy Policy outlines how we collect and use your information.</p>
+    <p>At <strong style="color: #1e8167;">Shrava's</strong><strong style="color:#d49548;"> World</strong>, we respect your privacy and are committed to protecting any personal information you share with us. This Privacy Policy outlines how we collect and use your information.</p>
 
     <h5>1. Information We Collect</h5>
     <ul>
