--- a/index.html
+++ b/index.html
@@ -312,14 +312,22 @@ main.hero-section {
 
   <div class="carousel-inner">
 
-    <!-- Slide 1 (LCP Optimized) -->
+     <!-- Slide 1 -->
     <div class="carousel-item active">
-      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-     style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative; background-color: rgba(0,0,0,0.5);"
-     loading="eager">
-  <!-- overlay now part of background-color for faster rendering -->
-
-        <div class="container position-relative">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 70vh;">
+        <img 
+          src="assets/about-480.png" 
+          srcset="assets/about-480.png 480w,
+                  assets/about-768.png 768w,
+                  assets/about-1200.png 1200w"
+          sizes="(max-width: 480px) 100vw,
+                 (max-width: 768px) 100vw,
+                 1200px"
+          alt="Pure Organic Trusted"
+          style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
+          loading="eager"
+        >
+        <div class="container position-relative" style="z-index:2;">
           <h3 class="display-4 fw-bold">Pure. Organic. Trusted.</h3>
           <p class="lead">
             Discover premium quality Cow Ghee, Cow Dung Cakes, Fresh Grapes, Crisp Cucumbers, Crunchy Peanuts, Aromatic Basmati Rice, Sweet Figs, Organic Onions, Spicy Green Chillies, Juicy Pomegranates, Sweet Corns & Bananas– all under one roof.
@@ -331,12 +339,20 @@ main.hero-section {
 
     <!-- Slide 2 -->
     <div class="carousel-item">
-      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-     style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative; background-color: rgba(0,0,0,0.5);"
-     loading="eager">
-  <!-- overlay now part of background-color for faster rendering -->
-
-        <div class="container position-relative">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 70vh;">
+        <img 
+          src="assets/about-480.png" 
+          srcset="assets/about-480.png 480w,
+                  assets/about-768.png 768w,
+                  assets/about-1200.png 1200w"
+          sizes="(max-width: 480px) 100vw,
+                 (max-width: 768px) 100vw,
+                 1200px"
+          alt="Sustainable Farming"
+          style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
+          loading="eager"
+        >
+        <div class="container position-relative" style="z-index:2;">
           <h3 class="display-4 fw-bold">Sustainable Farming</h3>
           <p class="lead">We bring farm-fresh organic goods straight to your door.</p>
           <a href="about.html" class="btn btn-warning btn-lg mt-3">Explore Who We Are</a>
@@ -346,12 +362,20 @@ main.hero-section {
 
     <!-- Slide 3 -->
     <div class="carousel-item">
-      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center"
-     style="background-image: url('assets/about.png'); background-size: cover; background-position: center; min-height: 70vh; position: relative; background-color: rgba(0,0,0,0.5);"
-     loading="eager">
-  <!-- overlay now part of background-color for faster rendering -->
-
-        <div class="container position-relative">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 70vh;">
+        <img 
+          src="assets/about-480.png" 
+          srcset="assets/about-480.png 480w,
+                  assets/about-768.png 768w,
+                  assets/about-1200.png 1200w"
+          sizes="(max-width: 480px) 100vw,
+                 (max-width: 768px) 100vw,
+                 1200px"
+          alt="Grown with Purpose"
+          style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
+          loading="eager"
+        >
+        <div class="container position-relative" style="z-index:2;">
           <h3 class="display-4 fw-bold">Grown with Purpose</h3>
           <p class="lead">From fertile lands to your hands — purity, passion, and perfection in every grain.</p>
           <a href="contact.html" class="btn btn-warning btn-lg mt-3">Let’s Connect</a>
