Reuploaded complete website with latest updates

--- a/index.html
+++ b/index.html
@@ -312,17 +312,11 @@ main.hero-section {
 
   <div class="carousel-inner">
 
-     <!-- Slide 1 -->
+    <!-- Slide 1: eager load -->
     <div class="carousel-item active">
-      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 70vh;">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 60vh;">
         <img 
-          src="assets/about-480.png" 
-          srcset="assets/about-480.png 480w,
-                  assets/about-768.png 768w,
-                  assets/about-1200.png 1200w"
-          sizes="(max-width: 480px) 100vw,
-                 (max-width: 768px) 100vw,
-                 1200px"
+          src="assets/about.png" 
           alt="Pure Organic Trusted"
           style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
           loading="eager"
@@ -337,20 +331,14 @@ main.hero-section {
       </div>
     </div>
 
-    <!-- Slide 2 -->
+    <!-- Slide 2: lazy load -->
     <div class="carousel-item">
-      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 70vh;">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 60vh;">
         <img 
-          src="assets/about-480.png" 
-          srcset="assets/about-480.png 480w,
-                  assets/about-768.png 768w,
-                  assets/about-1200.png 1200w"
-          sizes="(max-width: 480px) 100vw,
-                 (max-width: 768px) 100vw,
-                 1200px"
+          src="assets/about.png" 
           alt="Sustainable Farming"
           style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
-          loading="eager"
+          loading="lazy"
         >
         <div class="container position-relative" style="z-index:2;">
           <h3 class="display-4 fw-bold">Sustainable Farming</h3>
@@ -360,20 +348,14 @@ main.hero-section {
       </div>
     </div>
 
-    <!-- Slide 3 -->
+    <!-- Slide 3: lazy load -->
     <div class="carousel-item">
-      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 70vh;">
+      <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 60vh;">
         <img 
-          src="assets/about-480.png" 
-          srcset="assets/about-480.png 480w,
-                  assets/about-768.png 768w,
-                  assets/about-1200.png 1200w"
-          sizes="(max-width: 480px) 100vw,
-                 (max-width: 768px) 100vw,
-                 1200px"
+          src="assets/about.png" 
           alt="Grown with Purpose"
           style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
-          loading="eager"
+          loading="lazy"
         >
         <div class="container position-relative" style="z-index:2;">
           <h3 class="display-4 fw-bold">Grown with Purpose</h3>
