--- a/index.html
+++ b/index.html
@@ -312,14 +312,20 @@ main.hero-section {
 
   <div class="carousel-inner">
 
-    <!-- Slide 1: eager load -->
-    <div class="carousel-item active">
+       <div class="carousel-item active">
       <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 60vh;">
+        <!-- Low-res placeholder initially, full-res swaps in automatically -->
         <img 
-          src="assets/about.png" 
+          src="assets/about-480-blur.png" 
+          data-srcset="assets/about-480.png 480w,
+                       assets/about-768.png 768w,
+                       assets/about-1200.png 1200w"
+          sizes="(max-width: 480px) 100vw,
+                 (max-width: 768px) 100vw,
+                 1200px"
           alt="Pure Organic Trusted"
+          class="lazyload"
           style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
-          loading="eager"
         >
         <div class="container position-relative" style="z-index:2;">
           <h3 class="display-4 fw-bold">Pure. Organic. Trusted.</h3>
@@ -331,14 +337,20 @@ main.hero-section {
       </div>
     </div>
 
-    <!-- Slide 2: lazy load -->
+    <!-- Slide 2: lazy load with responsive images -->
     <div class="carousel-item">
       <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 60vh;">
         <img 
-          src="assets/about.png" 
+          src="assets/about-480-blur.png"
+          data-srcset="assets/about-480.png 480w,
+                       assets/about-768.png 768w,
+                       assets/about-1200.png 1200w"
+          sizes="(max-width: 480px) 100vw,
+                 (max-width: 768px) 100vw,
+                 1200px"
           alt="Sustainable Farming"
+          class="lazyload"
           style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
-          loading="lazy"
         >
         <div class="container position-relative" style="z-index:2;">
           <h3 class="display-4 fw-bold">Sustainable Farming</h3>
@@ -348,14 +360,20 @@ main.hero-section {
       </div>
     </div>
 
-    <!-- Slide 3: lazy load -->
+    <!-- Slide 3: lazy load with responsive images -->
     <div class="carousel-item">
       <div class="hero-slide d-flex align-items-center justify-content-center text-white text-center" style="position: relative; min-height: 60vh;">
         <img 
-          src="assets/about.png" 
+          src="assets/about-480-blur.png"
+          data-srcset="assets/about-480.png 480w,
+                       assets/about-768.png 768w,
+                       assets/about-1200.png 1200w"
+          sizes="(max-width: 480px) 100vw,
+                 (max-width: 768px) 100vw,
+                 1200px"
           alt="Grown with Purpose"
+          class="lazyload"
           style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;"
-          loading="lazy"
         >
         <div class="container position-relative" style="z-index:2;">
           <h3 class="display-4 fw-bold">Grown with Purpose</h3>
@@ -364,6 +382,7 @@ main.hero-section {
         </div>
       </div>
     </div>
+
 
   </div>
 
@@ -1368,6 +1387,11 @@ main.hero-section {
   <div data-include="components/footer.html"></div>
 
   <!-- Scripts -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" async></script>
+
+
+  
    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
 
