Reuploaded complete website with latest updates

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ main.hero-section {
           src="assets/about-480-blur.png" 
           data-srcset="assets/about-480.png 480w,
                        assets/about-768.png 768w,
-                       assets/about-1200.png 1200w"
+                       assets/about.png 1200w"
           sizes="(max-width: 480px) 100vw,
                  (max-width: 768px) 100vw,
                  1200px"
@@ -344,7 +344,7 @@ main.hero-section {
           src="assets/about-480-blur.png"
           data-srcset="assets/about-480.png 480w,
                        assets/about-768.png 768w,
-                       assets/about-1200.png 1200w"
+                       assets/about.png 1200w"
           sizes="(max-width: 480px) 100vw,
                  (max-width: 768px) 100vw,
                  1200px"
@@ -367,7 +367,7 @@ main.hero-section {
           src="assets/about-480-blur.png"
           data-srcset="assets/about-480.png 480w,
                        assets/about-768.png 768w,
-                       assets/about-1200.png 1200w"
+                       assets/about.png 1200w"
           sizes="(max-width: 480px) 100vw,
                  (max-width: 768px) 100vw,
                  1200px"
@@ -1391,7 +1391,7 @@ main.hero-section {
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" async></script>
 
 
-  
+
    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
 
