Reuploaded complete website with latest updates

--- a/index.html
+++ b/index.html
@@ -245,8 +245,15 @@ h1, h2 {
 
 
 .hero-slide .container p {
-  color: #ffffff; /* white */
+  color: #ffffff; /* pure white */
+  text-shadow:
+    0 0 4px rgba(255, 255, 255, 0.6),  /* soft inner glow */
+    0 0 8px rgba(255, 255, 255, 0.3);  /* faint outer glow */
 }
+
+
+
+
 
 /* =========================
    Animations
