Reuploaded complete website with latest updates

--- a/index.html
+++ b/index.html
@@ -1318,9 +1318,9 @@ h1, h2 {
 
  <div data-include="components/testimonials.html"data-aos="fade-up"></div>
  
-<div data-include="about-preview.html"></div>
+<div data-include="about-preview.html"data-aos="fade-up"></div>
 
-<section class="global-reach-section py-4 text-center text-white"> 
+<section class="global-reach-section py-4 text-center text-white"data-aos="fade-up"> 
   <style>
     /* Scoped styles specific to global-reach-section */
     .global-reach-section {
