Reuploaded complete website with latest updates

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ h1, h2 {
 
 
 .hero-slide .container h3 {
-  color: #FFD700; /* solid gold color */
+  color: #5ce83a; /* solid gold color */
   text-shadow: 
     0 1px 0 #fff,       /* subtle top highlight */
     0 2px 2px rgba(0,0,0,0.3), /* soft shadow below */
