--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ h1, h2 {
 
 
 .hero-slide .container h3 {
-  color: #5ce83a; /* solid gold color */
+  color: #51e83a; /* solid gold color */
   text-shadow: 
     0 1px 0 #fff,       /* subtle top highlight */
     0 2px 2px rgba(0,0,0,0.3), /* soft shadow below */
@@ -249,6 +249,19 @@ h1, h2 {
   text-shadow:
     0 0 4px rgba(255, 255, 255, 0.6),  /* soft inner glow */
     0 0 8px rgba(255, 255, 255, 0.3);  /* faint outer glow */
+}
+#heroCarousel .btn.btn-warning {
+  background-color: #51e83a !important;
+  border: none !important;
+  color: black !important;
+  font-weight: 600;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+#heroCarousel .btn.btn-warning:hover {
+  background-color: #45c933 !important; /* darker green on hover */
+  color: black !important;
+  transform: scale(1.05);
 }
 
 
