Reuploaded complete website with latest updates

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ h1, h2 {
   background-color: #51e83a !important;
   border: none !important;
   color: black !important;
-  font-weight: 600;
+  /* font-weight: 600; */
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
