--- a/about-preview.html
+++ b/about-preview.html
@@ -20,16 +20,16 @@
     }
     .about-title {
       font-weight: bold;
-      color: #1e8167;
+      color: #165F36;
     }
     .highlight-name strong:first-child {
-      color: #1e8167;
+      color: #165F36;
     }
     .highlight-name strong:last-child {
       color: #ffba66;
     }
     .about-btn {
-      background-color: #1e8167;
+      background-color: #165F36;
       border: none;
       padding: 10px 25px;
       border-radius: 30px;
@@ -39,7 +39,7 @@
     }
     .about-btn:hover {
       background-color: #ffba66;
-      color: #1e8167;
+      color: #165F36;
     }
     .about-content {
       text-align: left;
