--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
     }
      h1, h2 {
   font-family: 'Eczar', serif;
-  color: #1e8167;
+  color: #165F36;
 }
   body,
     h1, h2, h3, h4, h5, h6,
