updated last one

--- a/certificates.html
+++ b/certificates.html
@@ -125,48 +125,48 @@ body {
     <!-- GST -->
     <div class="col-12 col-md-6 col-lg-4">
       <div class="certificate-card">
-        <img src="/assets/images/certificates/gst.png" alt="GST">
+        <img src="assets/images/certificates/gst.png" alt="GST">
         <p class="certificate-name">GST Certificate</p>
         <p class="certificate-text">
          Official registration under the Goods and Services Tax (GST) system, proving legal compliance for tax purposes.
         </p>
-        <a href="/assets/certificates/gst.pdf" target="_blank" class="view-btn">View Certificate</a>
+        <a href="assets/certificates/gst.pdf" target="_blank" class="view-btn">View Certificate</a>
       </div>
     </div>
 
     <!-- IEC -->
     <div class="col-12 col-md-6 col-lg-4">
       <div class="certificate-card">
-        <img src="/assets/images/certificates/iec.png" alt="">
+        <img src="assets/images/certificates/iec.png" alt="">
         <p class="certificate-name">IEC Certificate</p>
         <p class="certificate-text">
            Import Export Code (IEC) issued by the DGFT, authorizing international trade operations.
         </p>
-        <a href="/assets/certificates/iec.pdf" target="_blank" class="view-btn">View Certificate</a>
+        <a href="assets/certificates/iec.pdf" target="_blank" class="view-btn">View Certificate</a>
       </div>
     </div>
 
     <!-- MSME -->
     <div class="col-12 col-md-6 col-lg-4">
       <div class="certificate-card">
-        <img src="/assets/images/certificates/udyami.png" alt="">
+        <img src="assets/images/certificates/udyami.png" alt="">
         <p class="certificate-name">MSME/Udyam Certificate</p>
         <p class="certificate-text">
           Official registration as a Micro, Small, or Medium Enterprise, confirming business legitimacy and eligibility for government benefits.
         </p>
-        <a href="/assets/certificates/udyamcertificate.pdf" target="_blank" class="view-btn">View Certificate</a>
+        <a href="assets/certificates/udyamcertificate.pdf" target="_blank" class="view-btn">View Certificate</a>
       </div>
     </div>
 
     <!-- FSSAI -->
     <div class="col-12 col-md-6 col-lg-4">
       <div class="certificate-card">
-        <img src="/assets/images/certificates/formg.png" alt="">
+        <img src="assets/images/certificates/formg.png" alt="">
         <p class="certificate-name">Maharashtra Shops and Establishments Certificate (Form G)</p>
         <p class="certificate-text">
           Certificate ensuring compliance with Maharashtra Shops and Establishments Act, regulating business operations and labor standards.
         </p>
-        <a href="/assets/certificates/formg.pdf" target="_blank" class="view-btn">View Certificate</a>
+        <a href="assets/certificates/formg.pdf" target="_blank" class="view-btn">View Certificate</a>
       </div>
     </div>
 
