updated last one

--- a/certificates.html
+++ b/certificates.html
@@ -130,7 +130,7 @@ body {
         <p class="certificate-text">
          Official registration under the Goods and Services Tax (GST) system, proving legal compliance for tax purposes.
         </p>
-        <a href="assets/certificates/gst.pdf" target="_blank" class="view-btn">View Certificate</a>
+        <!-- <a href="assets/certificates/gst.pdf" target="_blank" class="view-btn">View Certificate</a> -->
       </div>
     </div>
 
@@ -142,7 +142,7 @@ body {
         <p class="certificate-text">
            Import Export Code (IEC) issued by the DGFT, authorizing international trade operations.
         </p>
-        <a href="assets/certificates/iec.pdf" target="_blank" class="view-btn">View Certificate</a>
+        <!-- <a href="assets/certificates/iec.pdf" target="_blank" class="view-btn">View Certificate</a> -->
       </div>
     </div>
 
@@ -154,7 +154,7 @@ body {
         <p class="certificate-text">
           Official registration as a Micro, Small, or Medium Enterprise, confirming business legitimacy and eligibility for government benefits.
         </p>
-        <a href="assets/certificates/udyamcertificate.pdf" target="_blank" class="view-btn">View Certificate</a>
+        <!-- <a href="assets/certificates/udyamcertificate.pdf" target="_blank" class="view-btn">View Certificate</a> -->
       </div>
     </div>
 
@@ -166,9 +166,22 @@ body {
         <p class="certificate-text">
           Certificate ensuring compliance with Maharashtra Shops and Establishments Act, regulating business operations and labor standards.
         </p>
-        <a href="assets/certificates/formg.pdf" target="_blank" class="view-btn">View Certificate</a>
+        <!-- <a href="assets/certificates/formg.pdf" target="_blank" class="view-btn">View Certificate</a> -->
       </div>
     </div>
+
+    <!-- FSSAI -->
+<div class="col-12 col-md-6 col-lg-4">
+  <div class="certificate-card">
+    <img src="assets/images/certificates/fssai.png" alt="FSSAI">
+    <p class="certificate-name">FSSAI License</p>
+    <p class="certificate-text">
+      License issued by the Food Safety and Standards Authority of India, ensuring compliance with food safety regulations and standards.
+    </p>
+    <!-- <a href="assets/certificates/fssai.pdf" target="_blank" class="view-btn">View Certificate</a> -->
+  </div>
+</div>
+
 
    
 
