updated last one

--- a/about-preview.html
+++ b/about-preview.html
@@ -26,7 +26,7 @@
       color: #165F36;
     }
     .highlight-name strong:last-child {
-      color: #ffba66;
+      color: #FFC300;
     }
     .about-btn {
       background-color: #165F36;
@@ -38,7 +38,7 @@
       transition: 0.3s;
     }
     .about-btn:hover {
-      background-color: #ffba66;
+      background-color: #FFC300;
       color: #165F36;
     }
     .about-content {
