--- a/t&c.html
+++ b/t&c.html
@@ -53,7 +53,7 @@
   <main class="container py-5" data-aos="fade-up" data-aos-duration="3000">
     <h1 class="mb-4"style="font-weight: bold;">Terms & Conditions</h1>
 
-    <p>Welcome to <strong style="color: #165F36;">Shrava's</strong><strong style="color:#ffba66;"> World</strong>. By using our website, you agree to the following terms and conditions. Please read them carefully.</p>
+    <p>Welcome to <strong style="color: #165F36;">Shrava's</strong><strong style="color:#FFC300;"> World</strong>. By using our website, you agree to the following terms and conditions. Please read them carefully.</p>
 
     <h5>1. Nature of Service</h5>
     <p>Shrava's World is a product showcase platform that provides details of our organic offerings including Cow Ghee, Cow Dung Fertilizer, Onions, Figs, Green Chillies, and Pomegranates. Purchases are initiated via quotation requests. We do not collect payments online.</p>
