updated last one

--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
   <!-- Meta Title -->
   <title>Shrava's World (Shrava's Global Business Enterprises) | Organic Products</title>
 
+  
+  
   <!-- Meta Description -->
   <meta name="description" content="Shrava's World (Shrava's Global Business Enterprises) - Premium Organic Products: Cow Ghee, Grapes, Cucumbers, Peanuts, Rice, Figs, Onions, Chillies, Pomegranates, Sweet Corns, Bananas & Cow Dung Cakes." />
 
 
   <!-- Meta Keywords -->
   <meta name="keywords" content="Shrava's World,Shrava's Global Business Enterprises, Shrava's Global, Shrava Enterprises, Organic Products, Cow Ghee, Organic Vegetables, Fresh Fruits, Basmati Rice, Organic Farming" />
+
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/favicon-96x96.png">
+<link rel="manifest" href="assets/images/logo/site.webmanifest">
+
+<!-- ICO fallback -->
+<link rel="shortcut icon" href="assets/images/logo/favicon.ico" type="image/x-icon">
 
   <!-- Open Graph -->
 <meta property="og:title" content="Shrava's World (Shrava's Global Business Enterprises)" />
