updated last one

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Shrava's Global Business Enterprises",
-"alternateName": "Shrava's World"
+"alternateName": "Shrava's World",
   "url": "https://shravasworld.com",
   "logo": "https://shravasworld.com/assets/images/logo/logo.png",
   "sameAs": [
