--- a/certificates.html
+++ b/certificates.html
@@ -196,6 +196,8 @@ body {
   <script>
     AOS.init();
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
  <script src="js/include.js"></script>
   <script src="js/main.js"></script>
 </body>
