updated last one

--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
       e.preventDefault();
       loader.style.display = "flex"; // ✅ Show loader when sending starts
 
-      emailjs.sendForm("service_4vh0zlm", "template_hqhhenl", form)
+      emailjs.sendForm("service_4vh0zlm", "template_c8m7x9j", form)
         .then(function () {
           loader.style.display = "none"; // ✅ Hide loader after success
           const toast = new bootstrap.Toast(document.getElementById("successToast"), { delay: 3000 });
