--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -80,7 +80,7 @@
     <p>You may contact us at any time to request deletion or correction of your personal data.</p>
 
     <h5>7. Contact</h5>
-    <p>For questions about this policy, email us at: <strong>shravasworld@gmail.com</strong></p>
+    <p>For questions about this policy, email us at: <strong>enquiry@shravasworld.com</strong></p>
   </main>
 
 <div data-include="components/sticky-social.html"></div>
