--- a/products.html
+++ b/products.html
@@ -1161,7 +1161,7 @@
 
     loader.style.display = "flex"; // ✅ Show loader
 
-    emailjs.sendForm("service_4vh0zlm", "template_hqhhenl", this)
+    emailjs.sendForm("service_hk3av6k", "template_c8m7x9j", this)
       .then(() => {
         loader.style.display = "none"; // ✅ Hide loader after success
         alert("Quote request sent successfully!");
