--- a/t&c.html
+++ b/t&c.html
@@ -77,7 +77,7 @@
     <p>We reserve the right to modify these terms at any time. Updates will be posted on this page with a revised date.</p>
 
     <h5>8. Contact Us</h5>
-    <p>If you have questions regarding these terms, please contact us at: <strong>shravasworld@gmail.com</strong></p>
+    <p>If you have questions regarding these terms, please contact us at: <strong>enquiry@shravasworld.com</strong></p>
   </main>
 
   <div data-include="components/sticky-social.html"></div>
