--- a/products.html
+++ b/products.html
@@ -9,11 +9,44 @@
   <!-- Meta Keywords -->
   <meta name="keywords" content="Shrava's World, Shrava's Global Business Enterprises, Organic Products, Cow Ghee, Grapes, Rice, Peanuts, Onions, Chillies, Figs, Cucumbers, Pomegranates, Sweet Corns, Bananas, Cow Dung Cakes." />
 </head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+ <!-- Bootstrap CSS (Deferred) -->
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      media="print"
+      onload="this.media='all'">
+<noscript>
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+</noscript>
+
+<!-- EmailJS (Non-blocking JS) -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js" defer></script>
+
+<!-- AOS CSS (Deferred) -->
+<link rel="stylesheet"
+      href="https://unpkg.com/aos@2.3.4/dist/aos.css"
+      media="print"
+      onload="this.media='all'">
+
+<!-- Google Fonts (Optimized & Deferred) -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap"
+      media="print"
+      onload="this.media='all'">
+<noscript>
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap">
+</noscript>
+
+<!-- Bootstrap Icons (Deferred) -->
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      media="print"
+      onload="this.media='all'">
+
   <style>
     .hover-card {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
