updated last css time problem

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Shrava's Global Business Enterprises",
-"alternateName": "Shrava's World",
+"alternateName": [
+  "Shrava's World",
+  "Shravas World",
+  "Shrava World",
+  "Shrava Global",
+  "Shrava Enterprises",
+  "Shrava Global Business"
+]
+,
   "url": "https://shravasworld.com",
   "logo": "https://shravasworld.com/assets/images/logo/logo.png",
   "sameAs": [
